--- a/index.html
+++ b/index.html
@@ -17,12 +17,12 @@
     <meta name='robots' content='index, follow, max-image-preview:large, max-snippet:-1, max-video-preview:-1' />
 
     <!-- This site is optimized with the Yoast SEO plugin v19.0 - https://yoast.com/wordpress/plugins/seo/ -->
-    <title>New athletic director looks to stabilize program - The Paly Voice</title>
+    <title>Local Junior has Birthday, Peers Rejoicem - The Paly Voice</title>
     <link rel="canonical"
         href="https://palyvoice.com/167391/features/new-athletic-director-looks-to-stabilize-program/" />
     <meta property="og:locale" content="en_US" />
     <meta property="og:type" content="article" />
-    <meta property="og:title" content="New athletic director looks to stabilize program - The Paly Voice" />
+    <meta property="og:title" content="Local Junior has Birthday, Peers Rejoicem - The Paly Voice" />
     <meta property="og:description"
         content="Jennifer Crane was looking for a job as a physical education instructor when a surprise appeared in her inbox. Instead of a position for a PE teacher, she found an email informing her of an opening for the athletic director at Palo Alto High School. Crane is replacing Nelson Gifford, the school&#8217;s previous athletic director...." />
     <meta property="og:url"
@@ -44,7 +44,7 @@
 
 
     <link rel="alternate" type="application/rss+xml"
-        title="The Paly Voice &raquo; New athletic director looks to stabilize program Comments Feed"
+        title="The Paly Voice &raquo; Local Junior has Birthday, Peers Rejoicem Comments Feed"
         href="https://palyvoice.com/167391/features/new-athletic-director-looks-to-stabilize-program/feed/" />
 
     <style type="text/css">
@@ -1281,7 +1281,7 @@
 
     <!-- Start of Open Graph Meta Tags -->
 
-    <meta property="og:title" content="New athletic director looks to stabilize program" />
+    <meta property="og:title" content="Local Junior has Birthday, Peers Rejoicem" />
     <meta property="og:type" content="article" />
     <meta name="author" content="Avi Srinivasan" />
     <meta property="og:url"
@@ -5618,7 +5618,7 @@
             </div>
         </a>
         <a class="modal-share"
-            href="https://twitter.com/intent/tweet?text=New athletic director looks to stabilize program&amp;url=https%3A%2F%2Fpalyvoice.com%2F%3Fp%3D167391"
+            href="https://twitter.com/intent/tweet?text=Local Junior has Birthday, Peers Rejoicem&amp;url=https%3A%2F%2Fpalyvoice.com%2F%3Fp%3D167391"
             title="Tweet This Story" target="_blank">
             <div class="twitter-side-icon sno-side-icon sharing-mobile-hide sno-side-icon-">
                 <div class="sno-side-icon-ring">
